<resources>
    <string name="app_name">The Rise NYC</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">R</string>
    <string name="Friday">F</string>
    <string name="locations">Locations</string>
    <string name="quit">Quit</string>
    <string name="lets_workout">Workout Tools</string>
    <string name="timer">Timer</string>
    <string name="dice">Dice</string>
    <string name="website">www.therise.nyc</string>
    <string name="roll_number">Roll: 1</string>
    <string name="die_image">Die Image</string>
    <string name="cards">Cards</string>
    <string name="roll">Roll Dice</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="has_jokers">Jokers</string>
    <string name="stop">Stop</string>
    <string name="end_workout">End Workout</string>
    <string name="back">Back to Home Screen</string>
    <string name="presets">Presets</string>
    <string name="rise_hills">Friday Hills</string>
    <string name="rise_hiit">Monday HIIT</string>
    <string name="dice_instructions">Type in an exercise next to each die.\n Hold your finger on the text field to load an exercise.\n You can click save to store a new exercise.</string>
    <string name="cards_instructions">Type in an exercise next to each suit.\n Hold your finger on the text field to load an exercise. \n You can click save to store a new exercise.</string>
    <string name="set_alarm">Set An Alarm</string>
    <string name="bg_img_desc">Background image - The Rise NYC</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="fragment_tip_checkbox">Never see this dialog again.\nYou can also change this in your settings.</string>
    <string name="by_dayofweek">By Day of Week</string>
    <string name="volume">Volume</string>
    <string name="card_exercise">11 Pushups</string>
    <string name="current_card">1/52</string>
    <string name="by_borough">By Borough</string>
    <string name="allworkouts">All</string>
    <string name="save_preset_button">SAVE</string>
    <string name="hearts">Hearts</string>
    <string name="clubs">Clubs</string>
    <string name="spades">Spades</string>
    <string name="diamonds">Diamonds</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="save_exercise">SAVE EXERCISE</string>
    <string name="same_name_warning">Name is already being used.\nPlease choose a different name.</string>
    <string name="load_presets_text">Browse Presets</string>
    <string name="load_preset_dialog">Tap to load.\nHold your finger down to delete.</string>
    <string name="save_preset_dialog">Pick a name.\nBelow are the ones you already have stored.</string>
    <string name="save_presets_text">Save Preset</string>
    <string name="initial_time_elapsed">0:00</string>
    <string name="time_elapsed_string">Time\nElapsed</string>
    <string name="num_sets_picker_text">Sets</string>
    <string name="num_sets_default">7</string>
    <string name="no_presets">You do not have any presets saved.</string>
    <string name="no_exercises">You do not have any exercises saved.</string>
    <string name="preset_deleted">Preset deleted.</string>
    <string name="exercise_deleted">Exercise deleted.</string>
    <string name="preset_display">Monday HIIT</string>
    <string name="num_reps_picker_text">Reps</string>
    <string name="num_reps_default">8</string>
    <string name="work_time_picker_text">Work</string>
    <string name="work_time_default_tens">2</string>
    <string name="work_time_default_ones">0</string>
    <string name="rest_time_picker_text">Rest</string>
    <string name="rest_time_default_tens">1</string>
    <string name="rest_time_default_ones">0</string>
    <string name="lead_time_picker_text">Prep</string>
    <string name="prep_time_default_tens">1</string>
    <string name="prep_time_default_ones">0</string>
    <string name="break_time_picker_text">Break</string>
    <string name="break_time_default_tens">1</string>
    <string name="break_time_default_ones">0</string>
    <string name="end_timer_dialog">Workout done! Yeah buddy!</string>
    <string name="okay">Okay.</string>
    <string name="Manhattan">Manhattan</string>
    <string name="Brooklyn">Brooklyn</string>
    <string name="zero_secs">0</string>
    <string name="time_left">0:10</string>
    <string name="cant_go_back">No cards to go back to...</string>
    <string name="time_elapsed">0:00</string>
    <string name="stop_dialog">Would you like to PAUSE or STOP the workout?\nThe workout will reset if you stop it.</string>
    <string name="colon">:</string>
    <string name="countdown_chimes_on">Countdown chimes</string>
    <string name="prep">PREP</string>
    <string name="timer_message_heading">Something is wrong!</string>
    <string name="timer_message">Make sure:\n\n
        1) Work is at least 5 seconds in length (0:05)\n\n
        2) Rest, Break, and Prep are either\n\n
        (i) turned off (that is, 0:00)\n
        (ii) at least 5 seconds in length (0:05)\n\n
        3) You have at least 1 rep and 1 set.
    </string>
    <string name="rest">REST</string>
    <string name="play_desc">Press play to begin workout</string>
    <string name="work">WORK</string>
    <string name="break_seg">BREAK</string>
    <string name="finish">FINISH!</string>
    <string name="Queens">Queens</string>
    <string name="loc_single_img">Image for current workout</string>
    <string name="seconds_left">Time\n Left</string>
    <string name="gotit">Got it.</string>
    <string name="workout_icon_label">Fitness tool icon</string>
    <string name="location_icon_label">Workout locations icon</string>
    <string name="keepscreenon_title">Keep Screen On</string>
    <string name="dontshowdialog_title">Skip Intro Dialog</string>
    <string name="dontshowdialog_summary">Skip initial dialog explaining how the program works</string>
    <string name="keepscreenon_summary">Keep screen on during exercise segments</string>
    <string name="workout_desc">
        Tools for running a workout yourself. Includes:\n\n• A timer\n• A 6-sided die\n• A deck of cards\n\nUse presets from Rise workouts or make your own!</string>
    <string name="locations_desc">See where we work out.\nMap out your route and join us one morning!</string>
    <string name="organize_by">Organize By</string>
    <string name="sortby">Organize By</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="samp_description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
</resources>
