<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dice_layout_during"
    android:weightSum = "6"
    android:layout_margin = "10dp">
    <RelativeLayout
        android:layout_width = "match_parent"
        android:layout_height = "0dp"
        android:layout_weight = "1"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:text="@string/card_exercise"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dice_exercise"
            android:textAlignment="center"
            android:textSize="25sp"
            android:background="@drawable/rect_border3"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/die_image"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight=".55"
            android:contentDescription="@string/die_image"
            android:src="@drawable/dice_one" />

        <ImageView
            android:id="@+id/right_arrow"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_weight=".54"
            android:background="@drawable/rect_border2"
            android:contentDescription="@string/right_arrow"
            android:gravity="center"
            android:src="@drawable/ic_skip_next_blue_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/roll_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rect_border3"
            android:gravity="center_horizontal"
            android:text="@string/roll_number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal|bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight=".5"
            android:background="@drawable/rect_border4"
            android:contentDescription="@string/pause"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause_black_24dp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight=".5"
            android:background="@drawable/rect_border4"
            android:contentDescription="@string/stop"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_stop_black_24dp" />

        <TextView
            android:id="@+id/time_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".5"
            android:background="@drawable/rect_border3"
            android:gravity="center"
            android:text="@string/time_elapsed"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</LinearLayout>