<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum = "3"
    android:background="@drawable/jack_of_diamonds2"
    android:layout_margin = "10dp">

    <LinearLayout
    android:layout_width = "match_parent"
    android:layout_height = "0dp"
    android:layout_weight = ".4"
    android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:text="@string/card_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_exercise"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="normal|bold"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_weight = "2.25"
        android:weightSum="3"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <ImageView
                android:contentDescription="@string/left_arrow"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:id="@+id/left_arrow"
                android:src="@drawable/ic_skip_previous_black_24dp"
                android:scaleType="fitXY"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@color/background_color3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:text="@string/current_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight=".5"
                android:id="@+id/current_card"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="normal|bold"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:background="@color/background_color3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <ImageView
                android:contentDescription="@string/right_arrow"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:src="@drawable/ic_skip_next_black_24dp"
                android:id="@+id/right_arrow"
                android:gravity="center"
                android:scaleType="fitXY"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/background_color3" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_weight=".30"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:weightSum="3"
        android:layout_gravity="center"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:contentDescription="@string/pause"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight=".5"
            android:background="@drawable/rect_border4"
            android:src="@drawable/ic_pause_black_24dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:id="@+id/pause_button"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight=".5"
            android:contentDescription="@string/stop"
            android:background="@drawable/rect_border4"
            android:src="@drawable/ic_stop_black_24dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:id="@+id/stop_button"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:text="@string/time_left"
            android:layout_width="wrap_content"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/card_time_left"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="normal|bold"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="@drawable/rect_border3" />

    </LinearLayout>

</LinearLayout>