<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cards_layout_during"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/ace_of_clubs"
    android:orientation="vertical"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".4"
        android:gravity="center">

        <TextView
            android:id="@+id/card_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rect_border3"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/card_exercise"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2.25"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/left_arrow"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@color/background_color3"
                android:contentDescription="@string/left_arrow"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_skip_previous_grey_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/current_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight=".5"
                android:background="@color/background_color3"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/current_card"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <ImageView
                android:id="@+id/right_arrow"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"
                android:background="@color/background_color3"
                android:contentDescription="@string/right_arrow"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_skip_next_blue_24dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".30"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/pause_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight=".5"
            android:background="@drawable/rect_border4"
            android:contentDescription="@string/pause"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause_black_24dp"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_weight=".5"
            android:background="@drawable/rect_border4"
            android:contentDescription="@string/stop"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_stop_black_24dp" />

        <TextView
            android:id="@+id/time_elapsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".5"
            android:background="@drawable/rect_border3"
            android:gravity="center"
            android:text="@string/time_elapsed"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</LinearLayout>